--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,7 @@
 	
 	<script src='http://heresay.org.uk/api/js/mapstraction.js'></script>
 	
-	<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false" type="text/javascript"></script>
-
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
 	
 </head> 
@@ -40,16 +39,7 @@
 		<h2>Journey end</h2>
 		<div id='end_map' class='journey_map' ></div>
 		
-		<p>If I wasn't doing this, the radio station I would be listening to is: </p>
-		
-		<ul id='radio_choice' >
-			<li><input type="radio" name="station" value="Butter" > Radio 1</li>
-			<li><input type="radio" name="station" value="Butter" > Radio 2</li>
-			<li><input type="radio" name="station" value="Butter" > Radio 3</li>
-			<li><input type="radio" name="station" value="Butter" > Radio 4</li>
-			<li><input type="radio" name="station" value="Butter" > 5 Live</li>
-			<li><input type="radio" name="station" value="Butter" > 6 music</li>															
-		</ul>
+
 		
 		<h1 id='your_station_link'><a href='your-station.php' >Listen!</a></h1>
 		
